k3s/apps/base/cruxify/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cruxify
  labels:
    goldilocks.fairwinds.com/enabled: "true"
