k3s/apps/base/cruxify/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cruxify
spec:
  selector:
    app.kubernetes.io/name: cruxify-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
